# Element

./: .gitignore  Build.bat  Build.sh  CMakeLists.txt  Doc.bat  Doxyfile  Element  README.md  config.h  main.cpp
Include/: Application.h  Dll.h  Enums.h  Platform.h  Window.h
Tools/Super/: LICENSE  README.md  Super.json  SuperDestruct.py  SuperGen.py  SuperImpl.py  SuperLog.py
Window/Linux/: Build.sh  CMakeLists.txt  Export.sh  Window.cpp
Window/Linux/include/: Window.h
Window/Windows/: Build.bat  Export.bat  Logger.h  dllmain.cpp  dllmain.h  export.bat
Window/Windows/x64/Debug/: Window.dll.recipe  Window.exp  Window.ilk  Window.lib  Window.vcxproj.FileListAbsolute.txt  vc143.idb
Window/Windows/x64/Release/: Window.dll.recipe  Window.exp  Window.iobj  Window.ipdb  Window.lib  Window.vcxproj.FileListAbsolute.txt
include/: Application.h  Base.h  Class.h  Concepts.h  Dll.h  Enums.h  Logger.h  Platform.h  Structs.h  ThreadManager.h  Vector.h  Window.h
src/Application/: Application.cpp  Window.cpp
src/Base/: Base.cpp  Class.cpp
src/Global/: IO.hpp
